FrontEnd con parte de Back

--- a/reto/public/index.html
+++ b/reto/public/index.html
@@ -13,7 +13,7 @@
     
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     
-    <title>Sistema de gestión de peages de Departamento del Huila</title>
+    <title>Sistema de gestión de peajes de Departamento del Huila</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
